kustomize/overlays/staging/svc-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web-app
    env: staging
spec:
  selector:
    app: web-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
